# gc-content-calculator

./: .gitignore  README.md  pyproject.toml
data/: example.fasta
notebooks/: gc_example.ipynb
output/: gc_content.tsv
src/: gc_calculator.py
tests/: test_gc_calculator.py
